# allProgramme

./: .gitignore  Fonction.cs  README.md  mcreatorTips  mcreatorTips.md  mcreatorTips.txt
CEUAA12_dec23_PonchautNicolas/: formulaireMath.php  function.php  index.php
CEUAA12_dec23_PonchautNicolas/css/: appli.css  flex.css  style.css
PlatformIO/Projects/testpio/: platformio.ini  serialcommand.md
PonchautNicolas_Cryptage/: Fonction.cs  PonchautNicolas_Cryptage.sln  Program.cs
Puissance4/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Puissance4.csproj  Puissance4.sln
Puissance4/views/: Game.xaml  Game.xaml.cs  MenuStart.xaml  MenuStart.xaml.cs
RAT/TestRatCmd1/: Client.cs  Program.cs  Server.cs  TestRatCmd1.sln
RAT/c#/: RAT.sln
RAT/c#/OldRat/: Client.cs  Comment.txt  Fonction.cs  Form1.Designer.cs  Form1.cs  OldRAT.csproj  Program.cs  Server.cs  gpt.cs
RAT/c#/RATClient/: Client.cs  Fonction.cs  Program.cs  RATClient.csproj
RAT/c#/RATServeur/: Cmd.cs  File.cs  FormStream.cs  Home.cs  Program.cs  RATServeur.csproj
RAT/c#/RATWinFormApp1/: Client.cs  Comment.txt  Fonction.cs  Form1.Designer.cs  Form1.cs  Program.cs  RATWinFormApp1.csproj  RATWinFormApp1.sln  Server.cs
RAT/c/RATCmdC1/: Client.c  RATCmdC1.cbp  RATCmdC1.layout  Server.c  main.c
bat/: puissance4.bat  tool.bat
bat/tuto/: coulours.bat  multiTool.bat
batP4/: puissance4.bat
c#/Global/: AdminFunc.cs  FireWall.cs  Fonction.cs  TcpStreamConnection.cs
c#/puissance4/: Game.cs  Game.resx  Home.resx  puissance4.sln
c/MyLife/: README.md  adbIntall.sh  akTool.config.json  draw.excalidraw  needLinux.txt  project_structure.txt
c/akgine/: compile.sh  project_structure.txt
c/test/: akTool.config.json  compile.sh  dateTime.c  dateTime.h  debugCorrection.txt  error.h  files.c  files.h  fonction.h  input.c  input.h  main.c  path.c  path.h  project_code.txt  project_structure.txt  render.c  string.c  string.h  test.c
defSiteWeb/: README.md  fonction.js  index.js  package.json  test.js
defSiteWeb/serveur/: server.js
defaultWebSite/: fonction.js  index.js  package.json  test.js
defaultWebSite/serveur/: server.js
extantionVsCode/testextantionhere/: akTool.config.json  copie_script.js  copyo.txt  copyonsaveandedit.json  fuck.ino  project_code.txt  project_structure.txt  projstructgen.config.json  script.js  yoyoyo.txt
ia/: CommandDispatcher_commente.cs  EventDispatcher_commente.cs  MainThreadDispatcher_commente.cs  MessageDispatcher_commente.cs
js/akapp/: index.js  package-lock.json  package.json
js/tchat/: client.js  test.js
js/test/: package-lock.json  package.json
js/todoexample/: package.json  project_structure.txt  start.js
letsrole/: dndSys.js
php/example/: function.php  index.php
php/findNumber/: index.php
php/first_function/: function.php  index.php
php/preparation exam/: function.php  index.php
puissance4/: Form1.cs  Game.cs  Home.cs  Program.cs  puissance4_TemporaryKey.pfx
puissance4/Properties/: Resources.Designer.cs
rust/: Cargo.toml  TUTORIAL.md
rust/MyRustLife/: Cargo.toml  akTool.config.json  project_structure.txt
rust/MyRustLife/.cargo/: config.toml
rust/MyRustLife/docs/: .$UML.drawio.bkp  MyRustLife_architecture.drawio  build.txt  struct cible.txt
rust/MyRustLife/ia/: app.rs  category.rs  database.rs  repository.rs  state.rs  t.rs  task.rs
rust/MyRustLife/ia/mnt/user-data/outputs/orm/akTool/src/watchList/: repository.rs
rust/MyRustLife/scripts/: buildw_android.sh  buildw_windows.sh
rust/MyRustLife/src/: lib.rs  main.rs
rust/MyRustLife/src/app/: app.rs  debugActivity.rs  mainActivity.rs  mod.rs  releaseActivity.rs  stateManager.rs
rust/MyRustLife/src/core/: consts.rs  mod.rs  router.rs  state.rs
rust/MyRustLife/src/database/: mod.rs
rust/MyRustLife/src/home/: activity.rs  home.rs  mod.rs
rust/MyRustLife/src/todo/: activity.rs  home.rs  mod.rs  model.rs  repository.rs  task.rs
rust/MyRustLife/src/watchList/: activity.rs  mod.rs
rust/akgine/: Cargo.toml  project_code.txt  project_structure.txt
rust/akgine/src/: lib.rs
rust/akgine/src/database/: column.rs  database.rs  error.rs  mod.rs  query.rs  record.rs  repository.rs  value.rs
rust/akgine/src/navigation/: activity.rs  mod.rs  page.rs
rust/akgine/src/widgets/: button.rs
rust/appcrosspalt001/: gpt.txt
rust/appcrosspaltminifb/: Cargo.toml
rust/appcrosspaltminifb/frontend/: Cargo.toml
rust/appcrosspaltminifb/frontend/src/: lib.rs
rust/appcrosspaltwinit/: Cargo.toml  akTool.config.json  copyonsaveandedit.json  gpt2.txt  project_structure.txt  projstructgen.config.json
rust/appcrosspaltwinit/code/: Cargo.toml
rust/appcrosspaltwinit/code/src/: lib.rs  native.rs  web.rs
rust/appcrosspaltwinit/frontend/: Cargo.toml
rust/appcrosspaltwinit/frontend/src/: native.rs  web.rs
rust/appcrosspaltwinit/frontend/web_demo/: index.html
rust/fuck/: Cargo.toml
rust/ia/: Cargo.toml  TUTORIAL_DB_VAR.md  column.rs  lib (1).rs  lib.rs  mod.rs  query.rs
rust/ia/mnt/user-data/outputs/orm/akTool/src/todo/: repository.rs
shyntax php/: index.php
shyntax php copy/: index.php
testpio/: platformio.ini  project_structure.txt
vscode/: MyRustLife+akgine.code-workspace
(+269 files in other folders)
