[package]
name = "MyRustLife"
version = "0.0.0"
edition = "2024"

[lib]
name = "MyRustyLife"
crate-type = ["cdylib", "rlib"] # required for Android .so

[lints.rust]
unused_parens = "allow"

# [[bin]]
# name = "MyRustLife"
# path = "src/main.rs"

[dependencies]
akgine = { path = "D:\\github\\allProgramme\\rust\\akgine" }
egui_extras = { version = "0.34.1", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

# eframe SANS les features desktop/accesskit quand on build Android
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "android-native-activity",
    "glow",
    "persistence",
] }
android-activity = { version = "0.6", features = ["native-activity"] }

# cargo-apk metadata
[package.metadata.android]
package = "com.arflaka.MyRustyLife"
label = "MyRustyLife"
build_targets = ["aarch64-linux-android"]
resources = "assets/android"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[package.metadata.android.signing.release]
path = "C:\\Users\\bob\\.android\\debug.keystore"
store_password = "android"
key_alias = "androiddebugkey"
keystore_password = "android"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
