[package]
name = "akgine"
version = "0.1.0"
edition = "2024"

[lib]
name = "akgine"
crate-type = ["cdylib", "rlib"] # required for Android .so

[lints.rust]
unused_parens = "allow"

[dependencies]
egui_extras = { version = "0.34.1", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

# eframe SANS les features desktop/accesskit quand on build Android
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "android-native-activity",
    "glow",
    "persistence",
] }
android-activity = { version = "0.6", features = ["native-activity"] }
