[package]
name    = "db_derive"
version = "0.1.0"
edition = "2021"

# proc-macro = true is mandatory — this is what lets Rust load the crate
# at *compile time* (as a compiler plugin), not at runtime.
[lib]
proc-macro = true

[dependencies]
syn         = { version = "2", features = ["full"] }   # parses Rust token trees
quote       = "1"                                       # emits Rust token trees
proc-macro2 = "1"                                       # bridge between the two
