[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
backend = { path = "../backend" }
#optional active que si une features l'appel
#pixels = { version = "0.15", optional = true }
#winit = { version = "0.30.11", optional = true }
#wasm-bindgen = { version = "0.2", optional = true }
minifb = "0.28.0"
wasm-bindgen = "0.2"

#[features]
#default = []
#native = ["minifb"]
#web = ["wasm-bindgen"]
